On IE, ensure dashboard is 100% width

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -4,6 +4,7 @@
     border-radius: 1px;
     height: 42px !important;
     margin-bottom: 2px !important;
+    width: 100%;
 }
 
 .chatSummary {
